# torch-semimarkov

./: .gitignore  .pre-commit-config.yaml  README.md  debug_triton_ckpt.py  pyproject.toml  setup.py
.claude/skills/code-review/: STREAMING_VS_EXACT_CONVENTIONS.md
.claude/skills/code-sentinel/: .sentinel-meta.yaml  README.md  SKILL.md  sentinel.py  verify-assumptions.py
.claude/skills/code-sentinel/anchors/: anchors.yaml  assumptions.yaml  verify-anchor.sh
.claude/skills/code-sentinel/traces/: crf-heads.md  dispatch-overview.md  non-streaming-backends.md  triton-backward-k3plus.md  triton-forward-k3plus.md
.github/workflows/: ci.yml
Realistic_Contexts_Validation/: make_benchmark_configs_from_summary.py
benchmarks/: analyze_benchmarks.py  benchmark_backends.py  benchmark_grid.py  benchmark_memory_analysis.py  benchmark_semimarkov_grid.py  benchmark_streaming_backward.py  benchmark_streaming_scale.py  encoder_decoder_profile.py  mamba_encoder_stub.py  plot_figures.py  test_scale_backward.py
benchmarks/lib/: __init__.py  compile_utils.py  memory.py  output.py  runner.py  sampling.py
benchmarks/practical_demonstration/: README.md  calibration.py  calibration_integration.py  requirements.txt  run_benchmarks.py  smoke_test.py
benchmarks/practical_demonstration/gencode/: gencode_exon_intron.py
benchmarks/practical_demonstration/timit/: benchmark_timit_kernels.py  timit_phoneme.py  validate_timit_data.py
docs/: DEBUGGING_NAN.md  api.md  backends.md  benchmarks.md  disclosure.md  large_scale_backward_roadmap.md  parameter_guide.md  semirings.md  streaming_edge_api_roadmap.md  streaming_internals.md  uncertainty_and_focused_learning.md  workflow_integration.md
docs/manuscript/: backend_algorithm_supplement.tex  banded_is_not_viable_revised.md  streaming_algorithm_supplement.tex
examples/: lightning_integration.py
scripts/: benchmark_triton_vs_streaming.py
src/torch_semimarkov/: __init__.py  backward.py  banded.py  banded_utils.py  blocktriangular.py  checkpointed.py  duration.py  helpers.py  nn.py  semimarkov.py  streaming.py  triton_backward.py  triton_scan.py  uncertainty.py  validation.py
src/torch_semimarkov/_genbmm/: __init__.py  genmul.py  sparse.py
src/torch_semimarkov/_genbmm/csrc/: banded_cuda_kernel.cu  matmul_cuda.cpp  matmul_cuda_kernel.cu
src/torch_semimarkov/semirings/: __init__.py  checkpoint.py  semirings.py
src/torch_semimarkov/streaming/: __init__.py  autograd.py  find_determinism.py  pytorch_reference.py  triton_backward.py  triton_cache.py  triton_forward.py
streaming_functional/: triton_backward.py
tests/: __init__.py  conftest.py  test_backend_equivalence.py  test_banded_matrix.py  test_banded_utils.py  test_blocktriangular.py  test_boundary_precision.py  test_cpu_only.py  test_decode_optimization.py  test_edge_cases.py  test_edge_cases_extended.py  test_encoder_integration.py  test_error_handling.py  test_focused_learning.py  test_helpers_cpu.py  test_hsmm.py  test_nn.py  test_numerical_gradients.py  test_numerical_stability_clinical.py  test_partition_equivalence.py  test_semimarkov_banded.py  test_semimarkov_utils.py  test_semirings.py  test_streaming.py  test_streaming_k_boundaries.py  test_streaming_scale.py  test_streaming_triton.py  test_triton_backward.py  test_triton_scan.py  test_uncertainty_quantification.py  test_validation.py
