[build-system]
requires = ["setuptools>=61.0", "wheel", "torch>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-semimarkov"
version = "0.1.0"
description = "Efficient Semi-Markov CRF Inference for PyTorch"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Benjamin K. Johnson", email = "ben.johnson@example.com"}
]
keywords = [
    "pytorch",
    "semi-markov",
    "crf",
    "conditional-random-field",
    "sequence-labeling",
    "genomics",
    "deep-learning",
    "structured-prediction",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
    "pytest-cov",
    "black",
    "ruff",
    "flake8",
    "mypy",
]
cuda = []  # CUDA extension is optional, built separately

[project.urls]
Homepage = "https://github.com/benjohnson/torch-semimarkov"
Documentation = "https://github.com/benjohnson/torch-semimarkov#readme"
Repository = "https://github.com/benjohnson/torch-semimarkov"
Issues = "https://github.com/benjohnson/torch-semimarkov/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"torch_semimarkov._genbmm.csrc" = ["*.cpp", "*.cu"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "UP045",  # use X | None (not supported for py39)
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
